--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -40,3 +40,23 @@ body {
     width: 21px;
     margin-top: -4px;
 }
+
+/*Badges*/
+.notificationBadge {
+   position:relative;
+}
+.notificationBadge[data-badge]:after {
+   content:attr(data-badge);
+   position:absolute;
+   top:-10px;
+   right:-10px;
+   font-size:.7em;
+   background:green;
+   color:white;
+   width:18px;height:18px;
+   text-align:center;
+   line-height:18px;
+   border-radius:50%;
+   box-shadow:0 0 1px #333;
+   z-index:100;
+}
