--- a/resources/css/mystyles.css
+++ b/resources/css/mystyles.css
@@ -155,3 +155,73 @@ footer>.row {
     padding: 0 !important;
     margin: 0 !important;
 }
+
+/**BreadCrumb*/
+.breadcrumb {
+    padding: 0px;
+	background: #D4D4D4;
+	list-style: none; 
+	overflow: hidden;
+    margin-top: 20px;
+}
+.breadcrumb>li+li:before {
+	padding: 0;
+}
+.breadcrumb li { 
+	float: left; 
+}
+.breadcrumb li.active div {
+	background: brown;                   /* fallback color */
+	background: #ffc107 ; 
+}
+.breadcrumb li.completed div {
+	background: brown;                   /* fallback color */
+	background: hsla(153, 57%, 51%, 1); 
+}
+.breadcrumb li.active div:after {
+	border-left: 30px solid #ffc107 ;
+}
+.breadcrumb li.completed div:after {
+	border-left: 30px solid hsla(153, 57%, 51%, 1);
+} 
+
+.breadcrumb li div {
+	color: white;
+	text-decoration: none; 
+	padding: 10px 0 10px 45px;
+	position: relative; 
+	display: block;
+	float: left;
+}
+.breadcrumb li div:after { 
+	content: " "; 
+	display: block; 
+	width: 0; 
+	height: 0;
+	border-top: 50px solid transparent;           /* Go big on the size, and let overflow hide */
+	border-bottom: 50px solid transparent;
+	border-left: 30px solid hsla(0, 0%, 83%, 1);
+	position: absolute;
+	top: 50%;
+	margin-top: -50px; 
+	left: 100%;
+	z-index: 2; 
+}	
+.breadcrumb li div:before { 
+	content: " "; 
+	display: block; 
+	width: 0; 
+	height: 0;
+	border-top: 50px solid transparent;           /* Go big on the size, and let overflow hide */
+	border-bottom: 50px solid transparent;
+	border-left: 30px solid white;
+	position: absolute;
+	top: 50%;
+	margin-top: -50px; 
+	margin-left: 1px;
+	left: 100%;
+	z-index: 1; 
+}	
+.breadcrumb li:first-child div {
+	padding-left: 15px;
+}
