--- a/resources/css/mystyles.css
+++ b/resources/css/mystyles.css
@@ -34,7 +34,9 @@
     border-radius: 0.25rem 0 0 0.25rem;
     border-right: 0px;
 }
-
+.card-img-top{
+    height:125px !important;
+}
 @media (min-width: 34em) {
     .card-columns {
         -webkit-column-count: 2;
