--- a/resources/css/mystyles.css
+++ b/resources/css/mystyles.css
@@ -18,18 +18,6 @@
     margin-top: 25px;
 }
 
-.info {
-    max-height: 0px;
-    overflow: hidden;
-    transition: max-height 1s ease-in;
-}
-
-.card:hover .info {
-    max-height: 160px;
-    transition: max-height 1s ease-in-out;
-
-}
-
 .inputCant {
     border-radius: 0.25rem 0 0 0.25rem;
     border-right: 0px;
@@ -227,3 +215,43 @@ footer>.row {
 .breadcrumb li:first-child div {
 	padding-left: 15px;
 }
+
+
+
+.productbox {
+    background-color:#ffffff;
+     padding:10px;
+     margin-bottom:10px;
+     -webkit-box-shadow: 0 8px 6px -6px  #999;
+        -moz-box-shadow: 0 8px 6px -6px  #999;
+             box-shadow: 0 8px 6px -6px #999;
+ }
+ 
+ .producttitle, .componentes-box {
+    font-weight:bold;
+    padding:5px 0 5px 0;
+ }
+ 
+ .cardSpacer, .componentes-box{
+    flex-grow: 1;
+ }
+ 
+ .productprice {
+     border-top:1px solid #dadada;
+     padding-top:5px;
+ }
+ 
+ .pricetext {
+     font-weight:bold;
+     font-size:1.4em;
+ }
+ 
+ .numPersonas{
+    width:25px;
+ }
+ 
+ .product-img{
+    max-height:178px;
+    min-height:178px;
+ }
+ 
