--- a/resources/css/mystyles.css
+++ b/resources/css/mystyles.css
@@ -21,7 +21,7 @@ html{
 body {
     position: relative;
     margin: 0;
-    min-height: 100%;
+    min-height: calc(100% - 175px);
   }
 
   footer{
