--- a/resources/css/mystyles.css
+++ b/resources/css/mystyles.css
@@ -275,8 +275,7 @@ footer>.row {
     padding: 5px 0 5px 0;
 }
 
-.cardSpacer,
-.componentes-box {
+.cardSpacer,.componentes-box{
     flex-grow: 1;
 }
 
