--- a/resources/css/mystyles.css
+++ b/resources/css/mystyles.css
@@ -17,6 +17,30 @@ html{
     height:100%;
 }
 
+.btnAdmin{
+    min-height: 370px;
+    background-color: rgb(248, 246, 126);
+    border-radius: 50%;
+}
+
+.btnAdmin:hover{
+    background-color: rgb(240, 237, 74);
+}
+
+.iconoAdmin{
+    font-size: 170px;
+    margin: 14% 0% 0% 26%;
+}
+
+.textBtnAdmin1 {
+    margin-left: 25%;
+    font-size: 50px;
+}
+
+.textBtnAdmin2 {
+    margin-left: 14%;
+    font-size: 50px;
+}
 
 body {
     position: relative;
