--- a/resources/css/mystyles.css
+++ b/resources/css/mystyles.css
@@ -27,9 +27,14 @@ html{
     background-color: rgb(240, 237, 74);
 }
 
-.iconoAdmin{
+.iconoAdmin1, .iconoAdmin2{
     font-size: 170px;
     margin: 14% 0% 0% 26%;
+}
+
+.iconoAdmin3{
+    font-size: 170px;
+    margin: 18% 0% 0% 25%;
 }
 
 .textBtnAdmin1 {
@@ -39,6 +44,11 @@ html{
 
 .textBtnAdmin2 {
     margin-left: 14%;
+    font-size: 50px;
+}
+
+.textBtnAdmin3 {
+    margin-left: 20%;
     font-size: 50px;
 }
 
