--- a/resources/css/mystyles.css
+++ b/resources/css/mystyles.css
@@ -37,6 +37,11 @@ html{
     margin: 18% 0% 0% 25%;
 }
 
+.iconoAdmin4 {
+    font-size: 170px;
+    margin: 26% 0% 0% 34%;
+}
+
 .textBtnAdmin1 {
     margin-left: 25%;
     font-size: 50px;
