Fixes y avances admin

--- a/resources/css/mystyles.css
+++ b/resources/css/mystyles.css
@@ -17,24 +17,12 @@ html{
     height:100%;
 }
 
-.btnAdmin{
-    min-height: 370px;
-    background-color: rgb(248, 246, 126);
-    border-radius: 50%;
-}
-
 .btnAdmin:hover{
     background-color: rgb(240, 237, 74);
 }
 
-.iconoAdmin1, .iconoAdmin2{
+.iconoAdmin{
     font-size: 170px;
-    margin: 14% 0% 0% 26%;
-}
-
-.iconoAdmin3{
-    font-size: 170px;
-    margin: 18% 0% 0% 25%;
 }
 
 .listaFinal{
@@ -58,19 +46,10 @@ html{
     margin: 26% 0% 0% 34%;
 }
 
-.textBtnAdmin1 {
-    margin-left: 25%;
-    font-size: 50px;
-}
-
-.textBtnAdmin2 {
-    margin-left: 14%;
-    font-size: 50px;
-}
-
-.textBtnAdmin3 {
-    margin-left: 20%;
-    font-size: 50px;
+.btnAdmin {
+    background-color: #FFFF94;
+border: 58px solid transparent;
+border-radius: 100%;
 }
 
 body {
@@ -90,6 +69,9 @@ body {
     margin-top: 25px;
 }
 
+.main-container-admin{
+    min-width:90%;
+}
 .login-form-1{
     padding: 0;
 }
